# wooly-binance-backtest

./: .env.example  .envrc  .gitattributes  .gitignore  .sqlfluff  .sqlfluffignore  Makefile  README.md  dbt_project.yml  docker-compose.yml  package-lock.yml  profiles.yml  pyproject.toml  run.sh
analyses/: answer_strategy_questions.sql  answer_strategy_questions_windowed.sql
db/init/: 001_schemas.sql
docs/: assumptions.md  lightdash-viz.md  style-guide.md
macros/: generate_schema_name.sql
models/marts/: _marts__models.yml  _marts__unit_tests.yml  _strategy_marts__models.yml  fct_bitcoin_hourly_bars.sql  fct_strategy_by_hour.sql  fct_strategy_drawdown_by_hour.sql  fct_strategy_performance_by_hour.sql
models/staging/binance/: _binance__models.yml  _binance__sources.yml  _binance__unit_tests.yml  stg_binance__bitcoin_prices.sql
scripts/: lib.sh  load_data.sh  make_charts.py  print_answers.sh  setup.sh
tests/: assert_source_row_trust.sql  assert_staging_casts_lose_no_precision.sql
